--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 		<link rel="stylesheet" href="css/reset.css"/>
 		<link rel="stylesheet" href="css/global.css"/>
+		<link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	</head>
 	<body>
 		<header>
