--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>Rdio - Luke Chesser</title>
-
-		<link rel="stylesheet" href="css/reset.css"/>
-		<link rel="stylesheet" href="css/global.css"/>
-		<link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+		<link rel="stylesheet" href="reset.css"/>
+        <link rel="stylesheet" href="global.css"/>
+        <link rel="stylesheet" type="text/css" href="bootstrap.css">
 	</head>
 	<body>
+        
 		<header>
 			<div class="wrapper">
 				<div class="logo-search">
@@ -154,6 +154,7 @@
 					<div class="count">13 songs</div>
 				</article>
 			</section>
-		</main>
+        </main>
+    
 	</body>
 </html>
