--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
 			</div>
 		</header>
 		
+		
 			<div class="container">
 				<div class="row">
-					<div class="col-4">
+					<div class="col-12 col-md-4 col-xl-2">
 						<aside>
 							<h3>Browse</h3>
 							<nav class="browse">
@@ -56,7 +57,7 @@
 						</aside>
 
 					</div>
-					<div class="col-8">
+					<div class="col-12 col-md-8 col-xl-10">
 						<main>
 							<header>
 								<div class="name-photo">
